--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="number_area">
             <p><b>+37494494649</b></p>
             <p><b>Vanik Matshkalyan</b></p>
-            <p><b>vanik.matshkalyan@gmail.com</b></p>
+            <p><b>vanik.matshkalyan1996@gmail.com</b></p>
           </div>
           <div class="my_picture">
             <img src="./image/DSC_0167.JPG" alt="My picture" />
